@startuml "IOhire - Sprint 3: Pipeline IA + CV standardise"
!define DOMAIN_COLOR #E1F5FF
!define VALUE_OBJECT_COLOR #F3E5F5
!define ENUM_COLOR #E8F5E9
!define SERVICE_COLOR #FFF3E0

skinparam backgroundColor #FAFAFA
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho
skinparam class {
    BackgroundColor DOMAIN_COLOR
    BorderColor #0277BD
    ArrowColor #01579B
}

left to right direction

'======================
' Enums
'======================
enum ApplicationStatus <<ENUM>> #E8F5E9 {
    NEW
    PROCESSING
    PROCESSED
    REVIEWING
    SHORTLISTED
    REJECTED
    HIRED
    ERROR
}

enum JobPostingStatus <<ENUM>> #E8F5E9 {
    DRAFT
    OPEN
    CLOSED
}

enum CvTemplateKey <<ENUM>> #E8F5E9 {
    STANDARD
    EXPERIENCE_FIRST
    SKILLS_FIRST
    COMPACT
    EDUCATION_FIRST
    PROJECT_FOCUS
    SIDEBAR_PHOTO
    ACCENT_PINK
    TEAL_CIRCLE
    NAVY_GOLD
    SUNSET
}

'======================
' Actors
'======================
class HRUser <<ACTOR>> #FFEBEE {
    -email: String
    -password: String
    -role: String
    +previewCVTemplate(id: Integer, key: CvTemplateKey): String
}

'======================
' Domain Entities
'======================
class Candidate #E1F5FF {
    -id: Integer
    -fullName: String
    -email: String
    -linkedIn: String
    -portfolio: String
    -country: String
    -city: String
    -resume: String
    -status: ApplicationStatus
    -publicToken: String
    -trackingCodeHash: String
    -trackingCodeExpiresAt: String
    -consent: Boolean
    -consentAt: String
    -retentionUntil: String
    -hrNotes: String
    -candidateNotes: String
    -selfReportedYearsExperience: Integer
    -score: Decimal
    -extractedData: Object
    -standardizedCvMarkdown: String
    -cvTemplateKey: CvTemplateKey
    +getScore(): Decimal
    +getExtractedData(): Object
    +getStandardizedCV(): String
    +changeCVTemplate(key: CvTemplateKey): void
    +getEvaluationResult(): EvaluationResult
}

class JobPosting #E1F5FF {
    -id: Integer
    -title: String
    -description: String
    -status: JobPostingStatus
    +publish(): void
    +close(): void
    +updateRequirements(requirements: Requirements): void
    +getOpenJobs(): JobPosting[*]
    +getCandidates(): Candidate[*]
    +getCandidateCount(): Integer
}

'======================
' Value Objects
'======================
class Requirements <<VALUE_OBJECT>> #F3E5F5 {
    -skillsRequired: String[*]
    -skillsNiceToHave: String[*]
    -departments: String[*]
    -minYearsExperience: Integer
    -notes: String
}

class EvaluationConfig <<VALUE_OBJECT>> #F3E5F5 {
    -fitWeight: Integer
    -completenessWeight: Integer
    -requiredSkillsWeight: Integer
    -niceToHaveSkillsWeight: Integer
    -experienceWeight: Integer
    -completenessPoints: Object
    -qualityThresholds: Object
}

class CVTemplate <<VALUE_OBJECT>> #F3E5F5 {
    -key: CvTemplateKey
    -name: String
    -description: String
}

'======================
' Services
'======================
class AIProcessor <<SERVICE>> #FFF3E0 {
    +processCandidate(candidateId: Integer): void
    +extractTextFromResume(resume: String): String
    +parseResumeJSON(cvText: String): Object
    +deterministicEvaluate(requirements: Requirements, data: Object, meta: Object): EvaluationResult
    +generateCVMarkdown(data: Object): String
    +renderCVTemplate(templateKey: CvTemplateKey, contact: Object, content: Object): String
    +exportCVtoPDF(html: String): String
    +reprocessCandidate(candidateId: Integer): void
    +getAvailableTemplates(): CVTemplate[*]
}

'======================
' Relationships
'======================
Candidate "*" --> "1" JobPosting : applies_to
JobPosting "1" *-- "1" Requirements : contains
Requirements "0..1" *-- "0..1" EvaluationConfig : configures

Candidate "1" --> "0..1" CVTemplate : uses

HRUser "1" --> "0..*" Candidate : views_and_processes

AIProcessor ..> Candidate : processes
AIProcessor ..> Candidate : extracts_data_from
AIProcessor ..> JobPosting : analyzes_for
AIProcessor ..> Requirements : evaluates_against
AIProcessor ..> EvaluationConfig : applies_config
AIProcessor ..> CVTemplate : renders_with

@enduml
